День 2. Получение данных с сервера

--- a/wildberris-исходник/index.html
+++ b/wildberris-исходник/index.html
@@ -19,6 +19,8 @@
 	<link rel="stylesheet" href="css/style.css">
 	<script src="js/cart.js" defer></script>
 	<script src="js/search.js" defer></script>
+	<script src="js/GetGoods.js" defer></script>
+	
 </head>
 <!-- class="show-goods" -->
 
@@ -614,7 +616,6 @@
 		</div>
 	</div>
 
-	
 </body>
 
 </html>
